package org.example.herencia_ejemplos.empleados_tareas;

public class Desarrollador extends Empleado{

    public void realizarTarea(){
        System.out.println("Escribiendo código y solucionando bugs.");
    }
}
