package org.example.herencia_ejemplos.empleados_tareas;

public class Diseñador extends Empleado {

    public void realizarTarea(){
        System.out.println("Creando diseños gráficos y prototipos.");
    }
}
