package org.example.herencia_ejemplos.empleados_tareas;

public class Empleado {

    public void realizarTarea(){
        System.out.println("Empleado realizando una tarea genérica.");
    }
}
