package org.example.herencia_ejemplos.empleados_tareas;

public class Gerente extends Empleado{

    public void realizarTarea(){
        System.out.println("Supervisando el proyecto y organizando reuniones.");
    }
}
