@startuml
package "org.example.herencia_ejemplos.empleados_tareas" {

    class Empleado {
        + realizarTarea() : void
    }

    class Desarrollador {
        + realizarTarea() : void
    }

    class Diseñador {
        + realizarTarea() : void
    }

    class Gerente {
        + realizarTarea() : void
    }


    Empleado <|-- Desarrollador
    Empleado <|-- Diseñador
    Empleado <|-- Gerente
}
@enduml
